# planetAI

./: CMakeLists.txt  README.md
shaders/: planet.fs.glsl
src/: Planet.cpp  Planet.h  main.cpp
